--- a/index.html
+++ b/index.html
@@ -143,13 +143,47 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center bg-[var(--light-purple)] text-center px-6 fade-in">
-    <h1 class="text-5xl font-bold mb-4 sparkle">InnerSpark Studio</h1>
-    <p class="text-xl italic mb-8 sparkle">Where little sparks of magic are born...</p>
-    <a href="#about" class="button-press sparkle bg-[var(--light-yellow)] text-gray-900 px-8 py-3 rounded-full text-lg font-semibold hover:bg-yellow-300 transition">
-      Discover More
+<section id="hero" class="bg-gradient-to-br from-purple-100 to-yellow-50 py-24 px-6 text-center">
+  <div class="max-w-4xl mx-auto">
+    <h1 class="text-5xl md:text-6xl font-extrabold text-purple-700 mb-6 animate-fade-in-up">
+      Welcome to InnerSpark Studio
+    </h1>
+    <p class="text-xl md:text-2xl text-gray-700 mb-8 animate-fade-in-up delay-200">
+      Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
+    </p>
+    <a href="#explore-books" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-fade-in-up delay-300">
+      ✨ Explore Our Books
     </a>
-  </section>
+  </div>
+</section>
+  <!-- Who We Serve Section -->
+<section class="py-20 px-6 max-w-6xl mx-auto text-center">
+  <h2 class="text-4xl font-bold text-purple-700 mb-12">Who We Serve</h2>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+    
+    <!-- Children -->
+    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-purple-300 transition transform hover:-translate-y-2">
+      <div class="text-5xl mb-4">🧒</div>
+      <h3 class="text-2xl font-semibold mb-3 text-purple-800">Children</h3>
+      <p class="text-gray-700">Magical stories, vibrant characters, and hands-on tools to spark curiosity and early literacy.</p>
+    </div>
+
+    <!-- Educators -->
+    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-yellow-300 transition transform hover:-translate-y-2">
+      <div class="text-5xl mb-4">👩‍🏫</div>
+      <h3 class="text-2xl font-semibold mb-3 text-yellow-600">Educators</h3>
+      <p class="text-gray-700">Evidence-based guidebooks, workshops, and activities grounded in the science of reading and neuroscience.</p>
+    </div>
+
+    <!-- Schools -->
+    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-pink-300 transition transform hover:-translate-y-2">
+      <div class="text-5xl mb-4">🏫</div>
+      <h3 class="text-2xl font-semibold mb-3 text-pink-700">Schools</h3>
+      <p class="text-gray-700">Partnerships for literacy events, educator training, and child-centered creative experiences.</p>
+    </div>
+    
+  </div>
+</section>
 
   <!-- About Section -->
   <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
