--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <nav class="hidden md:flex space-x-6 text-gray-700 font-semibold">
       <a href="#home" class="hover:text-purple-600 transition">Home</a>
       <a href="#about" class="hover:text-purple-600 transition">About</a>
+      <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
       <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
       <a href="#programs" class="hover:text-purple-600 transition">Programs</a>
       <a href="#workshops" class="hover:text-purple-600 transition">Workshops</a>
@@ -39,6 +40,7 @@
   <div class="md:hidden hidden px-4 pb-4 space-y-2" id="mobile-menu">
     <a href="#home" class="block hover:text-purple-600">Home</a>
     <a href="#about" class="block hover:text-purple-600">About</a>
+    <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
     <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
     <a href="#programs" class="block hover:text-purple-600">Programs</a>
     <a href="#workshops" class="block hover:text-purple-600">Workshops</a>
@@ -118,6 +120,7 @@
       <nav class="hidden md:flex space-x-6 text-sm font-medium">
         <a href="#about">Welcome</a>
         <a href="#programs">Programs</a>
+        <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
         <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
         <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
         <a href="#gallery">Gallery</a>
@@ -134,6 +137,7 @@
     <nav id="mobile-menu" class="hidden flex-col space-y-3 px-6 pb-4 md:hidden bg-white border-t border-gray-200">
       <a href="#about" class="block py-1">Welcome</a>
       <a href="#programs" class="block py-1">Programs</a>
+      <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
       <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
       <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
       <a href="#gallery" class="block py-1">Gallery</a>
@@ -151,8 +155,8 @@
     <p class="text-xl md:text-2xl text-gray-700 mb-8 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
     </p>
-    <a href="#explore-books" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-fade-in-up delay-300">
-      ✨ Explore Our Books
+    <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
+      ✨ Who we serve
     </a>
   </div>
 </section>
