--- a/index.html
+++ b/index.html
@@ -145,21 +145,43 @@
       <a href="#contact" class="block py-1">Contact</a>
     </nav>
   </header>
-
-  <!-- Hero Section -->
-<section id="hero" class="bg-gradient-to-br from-purple-100 to-yellow-50 py-24 px-6 text-center">
+<!-- Hero Section -->
+<section id="hero" class="bg-gradient-to-br from-[var(--light-purple)] to-[var(--light-yellow)] py-24 px-6 text-center">
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-5xl md:text-6xl font-extrabold text-purple-700 mb-6 animate-fade-in-up">
-      Welcome to Inner Spark Studio
+    <h1 class="text-5xl md:text-6xl font-extrabold text-purple-700 mb-6 opacity-0 animate-fade-in-up">
+      Welcome to InnerSpark Studio
     </h1>
-    <p class="text-xl md:text-2xl text-gray-700 mb-8 animate-fade-in-up delay-200">
+    <p class="text-xl md:text-2xl text-gray-700 mb-8 opacity-0 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
     </p>
-    <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
-      ✨ Who we serve
+    <a href="#who-we-serve" class="inline-block bg-purple-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-purple-700 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
+      ✨ Who We Serve
     </a>
   </div>
 </section>
+
+<style>
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .animate-fade-in-up {
+    animation: fadeInUp 1s ease forwards;
+  }
+  .delay-200 {
+    animation-delay: 0.2s;
+  }
+  .delay-400 {
+    animation-delay: 0.4s;
+  }
+</style>
+  
   <!-- Who We Serve Section -->
 <section class="py-20 px-6 max-w-6xl mx-auto text-center">
   <h2 class="text-4xl font-bold text-purple-700 mb-12">Who We Serve</h2>
@@ -187,6 +209,10 @@
     </div>
     
   </div>
+</section>
+  
+  <section id="who-we-serve">
+  <!-- content -->
 </section>
 
   <!-- About Section -->
