--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       </div>
       <nav class="hidden md:flex space-x-6 text-sm font-medium">
         <a href="#about">Welcome</a>
-        <a href="#programs">Programs</a>
         <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
+        <a href="#programs">Programs</a>
         <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
         <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
         <a href="#gallery">Gallery</a>
@@ -136,8 +136,8 @@
     <!-- Mobile Menu -->
     <nav id="mobile-menu" class="hidden flex-col space-y-3 px-6 pb-4 md:hidden bg-white border-t border-gray-200">
       <a href="#about" class="block py-1">Welcome</a>
-      <a href="#programs" class="block py-1">Programs</a>
       <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
+      <a href="#programs" class="block py-1">Programs</a>
       <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
       <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
       <a href="#gallery" class="block py-1">Gallery</a>
@@ -149,7 +149,7 @@
 <section id="hero" class="bg-gradient-to-br from-[var(--light-purple)] to-[var(--light-yellow)] py-24 px-6 text-center">
   <div class="max-w-4xl mx-auto">
     <h1 class="text-5xl md:text-6xl font-extrabold text-purple-700 mb-6 opacity-0 animate-fade-in-up">
-      Welcome to InnerSpark Studio
+      Welcome to Inner Spark Studio
     </h1>
     <p class="text-xl md:text-2xl text-gray-700 mb-8 opacity-0 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
@@ -211,7 +211,7 @@
   </div>
 </section>
   
-  <section id="who-we-serve">
+<section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)]">
   <!-- content -->
 </section>
 
@@ -262,6 +262,12 @@
       <h3 class="text-xl font-semibold text-gray-800 mb-2">School Collaborations & Events</h3>
       <p class="text-gray-600">Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
     </div>
+
+    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
+  <div class="mb-4 text-purple-600 text-4xl">🎤</div>
+  <h3 class="text-2xl font-semibold mb-3">Conferences & Events</h3>
+  <p>Hosting and moderating major conferences and workshops to inspire educators and promote neuroscience-based literacy across Morocco.</p>
+</div>
   </div>
 </section>
 
