--- a/index.html
+++ b/index.html
@@ -131,20 +131,40 @@
       <div class="hidden md:block search-container">
         <input type="text" placeholder="Search..." class="px-3 py-1 rounded border border-gray-300" />
       </div>
-      <!-- Hamburger for mobile (placeholder) -->
-      <div class="hamburger md:hidden cursor-pointer text-purple-700 text-2xl select-none" onclick="toggleMobileMenu()">☰</div>
+      <!-- Hamburger mobile -->
+      <button
+        id="mobile-menu-button"
+        class="md:hidden text-purple-700 focus:outline-none ml-4"
+        aria-label="Toggle mobile menu"
+        onclick="toggleMobileMenu()"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
-    <!-- Mobile Menu -->
-    <nav id="mobile-menu" class="hidden flex-col space-y-3 px-6 pb-4 md:hidden bg-white border-t border-gray-200">
-      <a href="#about" class="block py-1">Welcome</a>
-      <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
-      <a href="#programs" class="block py-1">Programs</a>
-      <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
-      <a href="webinars.html" class="hover:text-purple-500">Webinars</a>
-      <a href="#gallery" class="block py-1">Gallery</a>
-      <a href="#hiring" class="block py-1">Hiring</a>
-      <a href="#contact" class="block py-1">Contact</a>
+
+    <!-- Mobile menu -->
+    <nav
+      id="mobile-menu"
+      class="hidden md:hidden px-6 pb-4 space-y-3 bg-white border-t border-gray-200"
+    >
+      <a href="#about" class="block py-1 hover:text-purple-600">Welcome</a>
+      <a href="#who-we-serve" class="block py-1 hover:text-purple-600">Who We Serve</a>
+      <a href="#programs" class="block py-1 hover:text-purple-600">Programs</a>
+      <a href="#explore-books" class="block py-1 hover:text-purple-600">Explore Our Books</a>
+      <a href="webinars.html" class="block py-1 hover:text-purple-600">Webinars</a>
+      <a href="#gallery" class="block py-1 hover:text-purple-600">Gallery</a>
+      <a href="hiring.html" class="block py-1 hover:text-purple-600">Join Our Team</a>
+      <a href="#contact" class="block py-1 hover:text-purple-600">Contact</a>
     </nav>
+  </header>
   </header>
 <!-- Hero Section -->
 <section id="hero" class="bg-gradient-to-br from-[var(--light-purple)] to-[var(--light-yellow)] py-24 px-6 text-center">
