--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </div>
 
     <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
-  <div class="mb-4 text-purple-500 text-4xl">🎤</div>
+  <div class="text-4xl mb-4 text-indigo-500">🎤</div>
   <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences & Events</h3>
   <p>Hosting and moderating major conferences and workshops to inspire educators and promote neuroscience-based literacy across Morocco.</p>
 </div>
