--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
       <p class="text-gray-600">Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
     </div>
 
-    <div class="bg-white rounded-3xl shadow-xl p-10 max-w-sm hover:scale-105 hover:shadow-purple-400 transition transform cursor-pointer relative" style="margin-top: 3rem;">
-  <div class="text-4xl mb-4 text-indigo-500">🎤</div>
-  <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences & Events</h3>
-  <p>Hosting and moderating major conferences and workshops to inspire educators and promote neuroscience-based literacy across Morocco.</p>
-</div>
-  </div>
-</section>
+   <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-green-400 hover:scale-105 transition duration-300">
+     <div class="text-4xl mb-4 text-indigo-500">🎤</div>
+     <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences & Events</h3>
+     <p>Hosting and moderating major conferences and workshops to inspire educators and promote neuroscience-based literacy across Morocco.</p>
+   </div>
+   </div>
+  </section>
 
  <section id="explore-books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-yellow)]">
   <h2 class="text-4xl font-bold text-center mb-12">Explore Our Books</h2>
