--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h1 class="text-xl font-bold text-purple-700 sparkle">InnerSpark Studio</h1>
       </div>
       <nav class="hidden md:flex space-x-6 text-sm font-medium">
-        <a href="#about">Welcome</a>
+        <a href="#about">Our mission</a>
         <a href="#who-we-serve" class="hover:text-purple-500">Who We Serve</a>
         <a href="#programs">Programs</a>
         <a href="#explore-books" class="hover:text-purple-500">Explore Our Books</a>
@@ -131,39 +131,33 @@
       <div class="hidden md:block search-container">
         <input type="text" placeholder="Search..." class="px-3 py-1 rounded border border-gray-300" />
       </div>
-      <!-- Hamburger mobile -->
-      <button
-        id="mobile-menu-button"
-        class="md:hidden text-purple-700 focus:outline-none ml-4"
-        aria-label="Toggle mobile menu"
-        onclick="toggleMobileMenu()"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-    </div>
 
-    <!-- Mobile menu -->
-    <nav
-      id="mobile-menu"
-      class="hidden md:hidden px-6 pb-4 space-y-3 bg-white border-t border-gray-200"
-    >
-      <a href="#about" class="block py-1 hover:text-purple-600">Welcome</a>
-      <a href="#who-we-serve" class="block py-1 hover:text-purple-600">Who We Serve</a>
-      <a href="#programs" class="block py-1 hover:text-purple-600">Programs</a>
-      <a href="#explore-books" class="block py-1 hover:text-purple-600">Explore Our Books</a>
-      <a href="webinars.html" class="block py-1 hover:text-purple-600">Webinars</a>
-      <a href="#gallery" class="block py-1 hover:text-purple-600">Gallery</a>
-      <a href="hiring.html" class="block py-1 hover:text-purple-600">Join Our Team</a>
-      <a href="#contact" class="block py-1 hover:text-purple-600">Contact</a>
-    </nav>
+      <!-- Hamburger (Mobile) -->
+<button
+  id="mobile-menu-button"
+  class="md:hidden text-purple-700 focus:outline-none"
+  aria-label="Toggle mobile menu"
+  onclick="toggleMobileMenu()"
+>
+  <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+      d="M4 6h16M4 12h16M4 18h16" />
+  </svg>
+</button>
+    </div>
+    
+<!-- Mobile Menu -->
+<div id="mobile-menu" class="hidden md:hidden flex flex-col items-center bg-white text-purple-700 space-y-4 py-6 shadow-md mt-20 z-50">
+  <a href="#about" class="hover:text-purple-600">Welcome</a>
+  <a href="#who-we-serve" class="hover:text-purple-600">Who We Serve</a>
+  <a href="#programs" class="hover:text-purple-600">Programs</a>
+  <a href="#explore-books" class="hover:text-purple-600">Explore Our Books</a>
+  <a href="webinars.html" class="hover:text-purple-600">Webinars</a>
+  <a href="#gallery" class="hover:text-purple-600">Gallery</a>
+  <a href="hiring.html" class="hover:text-purple-600">Join Our Team</a>
+  <a href="#contact" class="hover:text-purple-600">Contact</a>
+</div>
+
   </header>
   </header>
 <!-- Hero Section -->
@@ -238,7 +232,7 @@
 
   <!-- About Section -->
   <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
-    <h2 class="text-4xl font-bold mb-8 sparkle">Welcome</h2>
+    <h2 class="text-4xl font-bold mb-8 sparkle">Our mission</h2>
     <p class="text-lg leading-relaxed max-w-3xl mx-auto">
       At InnerSpark Studio, we believe every child carries a tiny spark of creativity, curiosity, and wonder.<br /><br />
       Our mission is to ignite these sparks through education, creativity, and emotional growth — shaping confident and joyful learners.<br /><br />
@@ -286,8 +280,8 @@
 
    <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-green-400 hover:scale-105 transition duration-300">
      <div class="text-4xl mb-4 text-indigo-500">🎤</div>
-     <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences & Events</h3>
-     <p>Hosting and moderating major conferences and workshops to inspire educators and promote neuroscience-based literacy across Morocco.</p>
+     <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences</h3>
+     <p>Hosting and moderating major educational conferences to inspire educators and promote neuroscience-based literacy across Morocco.</p>
    </div>
    </div>
   </section>
@@ -380,12 +374,13 @@
   });
 
   <!-- Scripts -->
+    
   <script>
-    // Mobile menu toggle
-    function toggleMobileMenu() {
-      const menu = document.getElementById('mobile-menu');
-      menu.classList.toggle('hidden');
-    }
+  function toggleMobileMenu() {
+    const menu = document.getElementById('mobile-menu');
+    menu.classList.toggle('hidden');
+  }
+</script>
 
     // Fade-in on scroll
     function onScrollFadeIn() {
