--- a/webinars.html
+++ b/webinars.html
@@ -26,11 +26,13 @@
     <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
       <a href="index.html" class="text-xl font-bold text-purple-700">InnerSpark Studio</a>
       <nav class="hidden md:flex space-x-6 text-sm font-medium text-gray-700">
-        <a href="index.html#about" class="hover:text-purple-600 transition">Welcome</a>
+        <a href="index.html#about" class="hover:text-purple-600 transition">Our mission</a>
+        <a href="index.html#programs" class="hover:text-purple-600 transition">Who we serve</a>
         <a href="index.html#programs" class="hover:text-purple-600 transition">Programs</a>
         <a href="index.html#explore-books" class="hover:text-purple-600 transition">Explore Our Books</a>
         <a href="webinars.html" class="hover:text-purple-600 transition font-semibold text-purple-700">Webinars</a>
         <a href="index.html#gallery" class="hover:text-purple-600 transition">Gallery</a>
+        <a href="index.html#gallery" class="hover:text-purple-600 transition">Join Our Team</a>
         <a href="index.html#contact" class="hover:text-purple-600 transition">Contact</a>
       </nav>
     </div>
