--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </div>
 
     <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-indigo-400 hover:scale-105 transition duration-300">
-      <div class="text-4xl mb-4 text-indigo-500">🎤</div>
+      <div class="text-4xl mb-4 text-indigo-500">👥🎓</div>
       <h3 class="text-xl font-semibold text-gray-800 mb-2">Workshops & Webinars</h3>
       <p class="text-gray-600">Live and recorded sessions to guide educators and parents in neuroscience-backed literacy methods.</p>
     </div>
