--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <p class="text-xl md:text-2xl text-gray-700 mb-8 opacity-0 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
     </p>
-    <a href="#who-we-serve" class="inline-block bg-purple-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-purple-700 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
+    <a href="#who-we-serve" class="inline-block bg-purple-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-light yellow-700 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
       ✨ Who We Serve
     </a>
   </div>
@@ -267,7 +267,7 @@
     </div>
 
     <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-indigo-400 hover:scale-105 transition duration-300">
-      <div class="text-4xl mb-4 text-indigo-500">👥🎓</div>
+      <div class="text-4xl mb-4 text-indigo-500">🎓</div>
       <h3 class="text-xl font-semibold text-gray-800 mb-2">Workshops & Webinars</h3>
       <p class="text-gray-600">Live and recorded sessions to guide educators and parents in neuroscience-backed literacy methods.</p>
     </div>
