--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   </div>
 </section>
   
-<section id="who-we-serve" class="scroll-mt-24 py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)]">
+<section id="who-we-serve" style="scroll-margin-top: 100px;">
   <!-- content -->
 </section>
 
