--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <p class="text-xl md:text-2xl text-gray-700 mb-8 opacity-0 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
     </p>
-    <a href="#who-we-serve" class="inline-block bg-purple-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-light yellow-700 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
+    <a href="#who-we-serve" class="inline-block light-yellow-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-light yellow-700 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
       ✨ Who We Serve
     </a>
   </div>
