--- a/index.html
+++ b/index.html
@@ -380,24 +380,23 @@
     const menu = document.getElementById('mobile-menu');
     menu.classList.toggle('hidden');
   }
+<script>
+  // Fade-in on scroll function
+  function onScrollFadeIn() {
+    const elements = document.querySelectorAll('.fade-in');
+    const windowBottom = window.innerHeight + window.scrollY;
+
+    elements.forEach((el) => {
+      const elementTop = el.offsetTop + 100; // small offset
+      if (windowBottom > elementTop) {
+        el.classList.add('visible');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', onScrollFadeIn);
+  window.addEventListener('load', onScrollFadeIn);
 </script>
-
-    // Fade-in on scroll
-    function onScrollFadeIn() {
-      const elements = document.querySelectorAll('.fade-in');
-      const windowBottom = window.innerHeight + window.scrollY;
-
-      elements.forEach((el) => {
-        const elementTop = el.offsetTop + 100; // small offset
-        if (windowBottom > elementTop) {
-          el.classList.add('visible');
-        }
-      });
-    }
-
-    window.addEventListener('scroll', onScrollFadeIn);
-    window.addEventListener('load', onScrollFadeIn);
-  </script>
 
 </body>
 </html>
