--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -279,7 +279,7 @@
       <p class="text-gray-600">Partnering with schools for training, storytelling sessions, and literacy-focused events.</p>
     </div>
 
-   <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-green-400 hover:scale-105 transition duration-300">
+   <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-indigo-400 hover:scale-105 transition duration-300">
      <div class="text-4xl mb-4 text-indigo-500">🎤</div>
      <h3 class="text-xl font-semibold text-gray-800 mb-2">Conferences</h3>
      <p>Hosting and moderating major educational conferences to inspire educators and promote neuroscience-based literacy across Morocco.</p>
