--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ f<!DOCTYPE html>
     <p class="text-xl md:text-2xl text-gray-700 mb-8 opacity-0 animate-fade-in-up delay-200">
       Nurturing children's creativity and literacy with magical stories, neuroscience, and the science of reading.
     </p>
-    <a href="#who-we-serve" class="inline-block light-yellow-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-yellow-500 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
-      ✨ Who We Serve
+    <a href="#who-we-serve" class="inline-block bg-yellow-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-yellow-500 transition-opacity opacity-0 animate-fade-in-up delay-400 shadow-lg">
+  ✨ Who We Serve
     </a>
   </div>
 </section>
@@ -226,7 +226,7 @@ f<!DOCTYPE html>
   </div>
 </section>
   
-<section id="who-we-serve" class="mt-20 scroll-mt-[100px]">
+<section id="who-we-serve" class="scroll-mt-32 mt-20 py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)]">
   <!-- content -->
 </section>
 
