--- a/index.html
+++ b/index.html
@@ -197,10 +197,9 @@
   }
 </style>
   
-  <!-- Who We Serve Section -->
-<section class="py-20 px-6 max-w-6xl mx-auto text-center">
-  <h2 class="text-4xl font-bold text-purple-700 mb-12">Who We Serve</h2>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+<section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
+  <!-- Content goes here -->
+</section>
     
     <!-- Children -->
     <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-purple-300 transition transform hover:-translate-y-2">
