--- a/index.html
+++ b/index.html
@@ -198,7 +198,27 @@
 </style>
   
 <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
-  <!-- Content goes here -->
+  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12">Who We Serve</h2>
+
+  <div class="grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+    <!-- Card 1 -->
+    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-semibold text-purple-600 mb-2">Children</h3>
+      <p class="text-gray-700">Magical stories, creativity, and literacy learning tailored for young minds.</p>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-semibold text-purple-600 mb-2">Educators</h3>
+      <p class="text-gray-700">Evidence-based training, classroom tools, and neuroscience-based approaches.</p>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-semibold text-purple-600 mb-2">Parents</h3>
+      <p class="text-gray-700">Support for home learning, emotional growth, and joyful reading at home.</p>
+    </div>
+  </div>
 </section>
     
     <!-- Children -->
