--- a/index.html
+++ b/index.html
@@ -196,59 +196,30 @@
     animation-delay: 0.4s;
   }
 </style>
-  
-<section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
-  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12">Who We Serve</h2>
 
-  <div class="grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-    <!-- Card 1 -->
-    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
-      <h3 class="text-xl font-semibold text-purple-600 mb-2">Children</h3>
-      <p class="text-gray-700">Magical stories, creativity, and literacy learning tailored for young minds.</p>
-    </div>
+  <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
+  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12 fade-in">Who We Serve</h2>
 
-    <!-- Card 2 -->
-    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
-      <h3 class="text-xl font-semibold text-purple-600 mb-2">Educators</h3>
-      <p class="text-gray-700">Evidence-based training, classroom tools, and neuroscience-based approaches.</p>
-    </div>
-
-    <!-- Card 3 -->
-    <div class="bg-white rounded-2xl shadow-md p-6 text-center">
-      <h3 class="text-xl font-semibold text-purple-600 mb-2">Parents</h3>
-      <p class="text-gray-700">Support for home learning, emotional growth, and joyful reading at home.</p>
-    </div>
-  </div>
-</section>
-    
+  <div class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 fade-in delay-200">
     <!-- Children -->
-    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-purple-300 transition transform hover:-translate-y-2">
-      <div class="text-5xl mb-4">🧒</div>
-      <h3 class="text-2xl font-semibold mb-3 text-purple-800">Children</h3>
-      <p class="text-gray-700">Magical stories, vibrant characters, and hands-on tools to spark curiosity and early literacy.</p>
+    <div class="bg-white rounded-2xl shadow-xl hover:shadow-yellow-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <h3 class="text-xl font-semibold text-purple-600 mb-3">Children</h3>
+      <p class="text-gray-700">We craft magical stories and activities that awaken creativity and support emotional growth, building a love for learning through joy and imagination.</p>
     </div>
 
     <!-- Educators -->
-    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-yellow-300 transition transform hover:-translate-y-2">
-      <div class="text-5xl mb-4">👩‍🏫</div>
-      <h3 class="text-2xl font-semibold mb-3 text-yellow-600">Educators</h3>
-      <p class="text-gray-700">Evidence-based guidebooks, workshops, and activities grounded in the science of reading and neuroscience.</p>
+    <div class="bg-white rounded-2xl shadow-xl hover:shadow-purple-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <h3 class="text-xl font-semibold text-purple-600 mb-3">Educators</h3>
+      <p class="text-gray-700">We provide evidence-based resources, training, and classroom tools rooted in the science of reading and neuroscience to elevate teaching practices.</p>
     </div>
 
-    <!-- Schools -->
-    <div class="bg-white rounded-3xl shadow-xl p-8 hover:shadow-pink-300 transition transform hover:-translate-y-2">
-      <div class="text-5xl mb-4">🏫</div>
-      <h3 class="text-2xl font-semibold mb-3 text-pink-700">Schools</h3>
-      <p class="text-gray-700">Partnerships for literacy events, educator training, and child-centered creative experiences.</p>
+    <!-- Parents -->
+    <div class="bg-white rounded-2xl shadow-xl hover:shadow-pink-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <h3 class="text-xl font-semibold text-purple-600 mb-3">Parents</h3>
+      <p class="text-gray-700">We offer support and guidance to make home learning joyful and effective, empowering parents to nurture literacy and emotional development.</p>
     </div>
-    
   </div>
 </section>
-  
-<section id="who-we-serve" class="scroll-mt-32 mt-20 py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)]">
-  <!-- content -->
-</section>
-
 
   <!-- About Section -->
   <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
