--- a/index.html
+++ b/index.html
@@ -203,20 +203,23 @@
   <div class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 fade-in delay-200">
     <!-- Children -->
     <div class="bg-white rounded-2xl shadow-xl hover:shadow-yellow-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <div class="text-5xl mb-4">🧒</div>
       <h3 class="text-xl font-semibold text-purple-600 mb-3">Children</h3>
       <p class="text-gray-700">We craft magical stories and activities that awaken creativity and support emotional growth, building a love for learning through joy and imagination.</p>
     </div>
 
     <!-- Educators -->
     <div class="bg-white rounded-2xl shadow-xl hover:shadow-purple-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <div class="text-5xl mb-4">👩‍🏫</div>
       <h3 class="text-xl font-semibold text-purple-600 mb-3">Educators</h3>
       <p class="text-gray-700">We provide evidence-based resources, training, and classroom tools rooted in the science of reading and neuroscience to elevate teaching practices.</p>
     </div>
 
-    <!-- Parents -->
+    <!-- Schools -->
     <div class="bg-white rounded-2xl shadow-xl hover:shadow-pink-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
+      <div class="text-5xl mb-4">🏫</div>
       <h3 class="text-xl font-semibold text-purple-600 mb-3">Parents</h3>
-      <p class="text-gray-700">We offer support and guidance to make home learning joyful and effective, empowering parents to nurture literacy and emotional development.</p>
+      <p class="text-gray-700">Partnerships for literacy events, educator training, and child-centered creative experiences.</p>
     </div>
   </div>
 </section>
