--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <!-- Schools -->
     <div class="bg-white rounded-2xl shadow-xl hover:shadow-pink-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
       <div class="text-5xl mb-4">🏫</div>
-      <h3 class="text-xl font-semibold text-purple-600 mb-3">Parents</h3>
+      <h3 class="text-xl font-semibold text-purple-600 mb-3">Schools</h3>
       <p class="text-gray-700">Partnerships for literacy events, educator training, and child-centered creative experiences.</p>
     </div>
   </div>
