--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     
 <!-- Mobile Menu -->
-<div id="mobile-menu" class="hidden md:hidden flex flex-col items-center bg-white text-purple-700 space-y-4 py-6 shadow-md mt-20 z-50">
+<div id="mobile-menu" class="hidden md:hidden flex flex-col items-center bg-white text-purple-700 space-y-4 py-6 shadow-md mt-4 z-50">
   <a href="#about" class="hover:text-purple-600">Welcome</a>
   <a href="#who-we-serve" class="hover:text-purple-600">Who We Serve</a>
   <a href="#programs" class="hover:text-purple-600">Programs</a>
@@ -379,6 +379,13 @@
 
   window.addEventListener('scroll', onScrollFadeIn);
   window.addEventListener('load', onScrollFadeIn);
+</script>
+  
+  <script>
+  function toggleMobileMenu() {
+    const menu = document.getElementById('mobile-menu');
+    menu.classList.toggle('hidden');
+  }
 </script>
 
 </body>
