--- a/index.html
+++ b/index.html
@@ -287,25 +287,19 @@
     <!-- Kindergarten -->
     <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
       <h3 class="text-2xl font-semibold text-gray-800">Kindergarten</h3>
-      <button class="bg-yellow-400 text-white px-4 py-2 rounded-full font-semibold hover:bg-yellow-500 transition">
-        Coming Soon
-      </button>
+      <a href="kindergarten-books.html" class="mt-auto bg-purple-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-700 transition">Learn More</a>
     </div>
 
     <!-- Lower Primary -->
     <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
       <h3 class="text-2xl font-semibold text-gray-800">Lower Primary</h3>
-      <button class="bg-purple-500 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-600 transition">
-        Coming Soon
-      </button>
+      <a href="lower-primary-books.html" class="mt-auto bg-purple-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-700 transition">Learn More</a>
     </div>
 
     <!-- Upper Primary -->
     <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
       <h3 class="text-2xl font-semibold text-gray-800">Upper Primary</h3>
-      <button class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition">
-        Coming Soon
-      </button>
+      <a href="upper-primary-books.html" class="mt-auto bg-purple-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-700 transition">Learn More</a>
     </div>
   </div>
 </section>
