--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </style>
 
   <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
-  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12 fade-in">🌟Who We Serve</h2>
+  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12 fade-in">✨ Who We Serve</h2>
 
   <div class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 fade-in delay-200">
     <!-- Children -->
@@ -226,7 +226,7 @@
 
   <!-- About Section -->
   <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
-    <h2 class="text-4xl font-bold mb-8 sparkle">Our mission</h2>
+    <h2 class="text-4xl font-bold mb-8 sparkle">✨ Our mission</h2>
     <p class="text-lg leading-relaxed max-w-3xl mx-auto">
       At InnerSpark Studio, we believe every child carries a tiny spark of creativity, curiosity, and wonder.<br /><br />
       Our mission is to ignite these sparks through education, creativity, and emotional growth — shaping confident and joyful learners.<br /><br />
