--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
 </style>
 
   <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
-  <h2 class="text-4xl font-bold text-center text-purple-700 mb-12 fade-in">✨ Who We Serve</h2>
-
+  <h2 class="inline-block bg-purple-100 px-10 py-5 rounded-lg font-bold text-4xl text-center text-purple-700 mb-12 fade-in">
+    ✨ Who We Serve
+  </h2>
   <div class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 fade-in delay-200">
     <!-- Children -->
     <div class="bg-white rounded-2xl shadow-xl hover:shadow-yellow-300 p-6 text-center transition duration-300 transform hover:-translate-y-1">
@@ -224,22 +225,23 @@
   </div>
 </section>
 
-  <!-- About Section -->
-  <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
-    <h2 class="text-4xl font-bold mb-8 sparkle">✨ Our mission</h2>
-    <p class="text-lg leading-relaxed max-w-3xl mx-auto">
+ <section id="about" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-beige)] fade-in">
+  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
+    ✨ Our mission
+  </h2>
+  <p class="text-lg leading-relaxed max-w-3xl mx-auto">
       At InnerSpark Studio, we believe every child carries a tiny spark of creativity, curiosity, and wonder.<br /><br />
       Our mission is to ignite these sparks through education, creativity, and emotional growth — shaping confident and joyful learners.<br /><br />
       Through storytelling, playful exploration, and meaningful learning experiences, we light up each child’s path with connection, imagination, and heart.<br /><br />
       We believe that nurturing a child's mind and heart can light up their whole future.<br /><br />
-      Join us on this magical journey of learning and dreaming together!
-    </p>
+      Discover how you can be part of this magical journey — explore our programs, stories, and events.  </p>
   </section>
   
-  <!-- Programs Section -->
+ <!-- Programs Section -->
 <section id="programs" class="py-20 px-6 max-w-7xl mx-auto bg-gradient-to-br from-yellow-100 via-pink-50 to-purple-100">
-  <h2 class="text-4xl font-bold text-center mb-16 text-purple-700 sparkle">✨ Our Magical Programs ✨</h2>
-  
+  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-10 py-5 rounded-lg font-bold text-4xl mb-16 sparkle text-center">
+    ✨ Our Magical Programs ✨
+  </h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 justify-items-center">
     <!-- Program Card -->
     <div class="bg-white rounded-3xl shadow-lg p-8 w-full max-w-sm text-center hover:shadow-purple-400 hover:scale-105 transition duration-300">
@@ -281,8 +283,9 @@
   </section>
 
  <section id="explore-books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-yellow)]">
-  <h2 class="text-4xl font-bold text-center mb-12">Explore Our Books</h2>
-
+  <h2 class="inline-block bg-yellow-100 border border-yellow-400 text-yellow-700 px-10 py-5 rounded-lg font-bold text-4xl mb-12 text-center">
+    Explore Our Books
+  </h2>
   <div class="flex flex-wrap justify-center gap-8">
     <!-- Kindergarten -->
     <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
