--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
   }
 </style>
 
-  <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-beige)] scroll-mt-28">
-  <h2 class="inline-block bg-purple-100 px-10 py-5 rounded-lg font-bold text-4xl text-center text-purple-700 mb-12 fade-in">
+  <section id="who-we-serve" class="py-20 px-6 max-w-6xl mx-auto text-center bg-[var(--light-beige)] scroll-mt-28">
+  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
     ✨ Who We Serve
   </h2>
   <div class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 fade-in delay-200">
@@ -238,8 +238,8 @@
   </section>
   
  <!-- Programs Section -->
-<section id="programs" class="py-20 px-6 max-w-7xl mx-auto bg-gradient-to-br from-yellow-100 via-pink-50 to-purple-100">
-  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-10 py-5 rounded-lg font-bold text-4xl mb-16 sparkle text-center">
+<section id="programs" class="py-20 px-6 max-w-7xl mx-auto text-center bg-gradient-to-br from-yellow-100 via-pink-50 to-purple-100">
+  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
     ✨ Our Magical Programs ✨
   </h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 justify-items-center">
@@ -282,9 +282,9 @@
    </div>
   </section>
 
- <section id="explore-books" class="py-20 px-6 max-w-6xl mx-auto bg-[var(--light-yellow)]">
-  <h2 class="inline-block bg-yellow-100 border border-yellow-400 text-yellow-700 px-10 py-5 rounded-lg font-bold text-4xl mb-12 text-center">
-    Explore Our Books
+ <section id="explore-books" class="py-20 px-6 max-w-6xl mx-auto text-center bg-[var(--light-yellow)]">
+  <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
+    ✨ Explore Our Books
   </h2>
   <div class="flex flex-wrap justify-center gap-8">
     <!-- Kindergarten -->
