--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
  <!-- Programs Section -->
 <section id="programs" class="py-20 px-6 max-w-7xl mx-auto text-center bg-gradient-to-br from-yellow-100 via-pink-50 to-purple-100">
   <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
-    ✨ Our Magical Programs ✨
+    ✨ Our Magical Programs 
   </h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 justify-items-center">
     <!-- Program Card -->
