--- a/index.html
+++ b/index.html
@@ -286,27 +286,27 @@
   <h2 class="inline-block bg-purple-100 border border-purple-400 text-purple-700 px-8 py-4 rounded-lg font-bold text-4xl mb-8 sparkle">
     ✨ Explore Our Books
   </h2>
-  <div class="flex flex-wrap justify-center gap-8">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 justify-items-center">
     <!-- Kindergarten -->
-    <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
-      <h3 class="text-2xl font-semibold text-gray-800">Kindergarten</h3>
-      <a href="kindergarten.html" class="bg-yellow-400 text-white px-4 py-2 rounded-full font-semibold hover:bg-yellow-500 transition">
+    <div class="rounded-2xl p-6 bg-white shadow-md hover:shadow-yellow-400/60 hover:scale-105 transition-transform duration-300 ease-in-out fade-in-up text-center w-full max-w-xs">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-4">Kindergarten</h3>
+      <a href="kindergarten.html" class="bg-yellow-400 text-white px-6 py-2 rounded-full font-semibold hover:bg-yellow-500 transition-colors">
         Learn More
       </a>
     </div>
 
     <!-- Lower Primary -->
-    <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
-      <h3 class="text-2xl font-semibold text-gray-800">Lower Primary</h3>
-      <a href="lower-primary.html" class="bg-purple-500 text-white px-4 py-2 rounded-full font-semibold hover:bg-purple-600 transition">
+    <div class="rounded-2xl p-6 bg-white shadow-md hover:shadow-purple-400/60 hover:scale-105 transition-transform duration-300 ease-in-out fade-in-up text-center w-full max-w-xs">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-4">Lower Primary</h3>
+      <a href="lower-primary.html" class="bg-purple-500 text-white px-6 py-2 rounded-full font-semibold hover:bg-purple-600 transition-colors">
         Learn More
       </a>
     </div>
 
     <!-- Upper Primary -->
-    <div class="rounded-xl p-6 shadow-md text-center flex flex-col gap-4 w-64 bg-white hover:shadow-xl transition duration-300">
-      <h3 class="text-2xl font-semibold text-gray-800">Upper Primary</h3>
-      <a href="upper-primary.html" class="bg-gray-700 text-white px-4 py-2 rounded-full font-semibold hover:bg-gray-800 transition">
+    <div class="rounded-2xl p-6 bg-white shadow-md hover:shadow-gray-500/50 hover:scale-105 transition-transform duration-300 ease-in-out fade-in-up text-center w-full max-w-xs">
+      <h3 class="text-2xl font-semibold text-gray-800 mb-4">Upper Primary</h3>
+      <a href="upper-primary.html" class="bg-gray-700 text-white px-6 py-2 rounded-full font-semibold hover:bg-gray-800 transition-colors">
         Learn More
       </a>
     </div>
