--- a/index.html
+++ b/index.html
@@ -314,9 +314,8 @@
 </section>
 
   <!-- Contact Section -->
-  class="py-20 px-6 max-w-6xl mx-auto text-center bg-[var(--light-yellow)]scroll-mt-28">   
-  <section id="contact" class="py-15 px-5 max-w-4xl mx-auto text-center bg-[var(--light-purple)] class="text-gray-900 fade-in scroll-mt-28" 
-    <h2 class="text-5xl font-bold mb-9 sparkle">Contact Us</h2>
+  <section id="contact" class="py-20 px-6 max-w-4xl mx-auto text-center bg-[var(--light-purple)] text-gray-900 rounded-xl">
+    <h2 class="text-4xl font-bold mb-8">Contact Us</h2>
     <p class="text-lg mb-6">We'd love to hear from you! Email us at:</p>
     <a href="mailto:hello@innersparkstudio.com" class="text-xl font-semibold underline hover:text-blue-700">
       hello@innersparkstudio.com
