--- a/thank-you.html
+++ b/thank-you.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thank You!</title>
-  <link href="/styles/tailwind.css" rel="stylesheet" />
+  <link href="styles/tailwind.css" rel="stylesheet" /> <!-- ✅ Correct path -->
 </head>
 <body class="bg-purple-50 text-gray-900 flex items-center justify-center h-screen">
 
   <div class="bg-white p-10 rounded-3xl shadow-xl text-center max-w-xl w-full">
     <h1 class="text-3xl font-bold text-purple-700 mb-4">Thank You! 🎉</h1>
     <p class="text-lg">Your registration was received. We’ll email you with webinar details soon!</p>
-    <a href="/" class="inline-block mt-6 text-purple-700 hover:text-purple-900 underline">Return to homepage</a>
+    <a href="index.html" class="inline-block mt-6 text-purple-700 hover:text-purple-900 underline">Return to homepage</a>
   </div>
 
 </body>
